--- a/pedersene/index.html
+++ b/pedersene/index.html
@@ -69,7 +69,19 @@ Personal experience, frustrating interface logic. A frustrating experience I had
 
 Thoughtful interface layout and control design empower users by reducing errors, building trust, and guiding behavior. When designers apply principles like the aesthetic-usability effect, von restorff effect, and postels law they create experiences that align with human psychology and ultimately with user success.  
 
-         <!-- Module 3.2 Blog Post Starts here -->
+         <!-- Module 3.2 Blog Post Starts here -->Reflection, Feedback timing, responsiveness, and motion UX. The timing and quality of feedback in digital interactions significantly impact how users feel both during and after their experience. Quick, meaningful, and well-designed feedback helps users feel confident, in control, and respected. When feedback is delayed or absent, users may feel confused, anxious, or even abandoned by the system. 
+
+Key UX Laws in Play, Doherty threshold, This law states that system response times under 400 milliseconds keep users engaged and improve productivity. When an app or website reacts instantly to input — such as button clicks or form submissions — it creates a sense of flow. In contrast, delays break concentration and increase frustration. 
+
+Peak-end rule, Users tend to remember experiences based on their peak moments and how they end. If an app performs smoothly but ends with a confusing checkout error or slow confirmation screen, that’s the emotion users will retain — regardless of how well the rest worked. This highlights why responsive and positive feedback at task completion (e.g., a success animation or thank-you message) is essential. 
+
+Jakob’s Law, Users spend most of their time on other sites, so they expect yours to behave similarly. If your interface responds or moves in an unfamiliar or inconsistent way, it can cause discomfort or distrust. Thoughtful motion design (e.g., animated loaders or micro-interactions) can reinforce feedback while matching familiar mental models. 
+
+While motion and feedback can enhance experience, they can also be manipulative if misused. For example, Dark patterns like “sneaky animations” that hide opt-outs or emphasize upsells can trick users. Countdown timers or “only 2 left!” messages often create false urgency — persuasive but ethically questionable. 
+
+As discussed in Designing with the Mind in Mind, ethical design considers not just what users can be persuaded to do, but what serves their best interest. UX designers must balance business goals with user well-being, especially when designing emotionally impactful touchpoints. 
+
+I once used a meditation app that provided gentle haptic feedback and fading animations when completing a session. This responsive, calming interaction reinforced the experience emotionally — aligning with the Peak–End Rule by ending on a soothing note. On the flip side, I’ve used e-commerce apps where slow load times and jarring transitions made me abandon the cart — violating the Doherty Threshold and breaking my trust.                            Well-timed feedback, fluid responsiveness, and thoughtful motion not only shape user perceptions in the moment but define how they remember and talk about the experience. By aligning these elements with UX laws and ethical design principles, we can build digital products that are not just efficient, but respectful and humane. 
 
       </main>
 <!-- Page Footer  -->
