--- a/cheonc/index.html
+++ b/cheonc/index.html
@@ -8,15 +8,21 @@
    </head>
    <body>
 <!-- Page Header  -->
-      <header class="page-header">
-         <h1>Portfolio</h1>
-      </header>
+      <a href="#" class="logo">Profolio</a>
+         <nav class="main-nav">
+         <a href="#Module 1.1 Blog Post">Module 1.1 Blog Post</a>
+         <a href="#Module 1.2 Blog Post">Module 1.2 Blog Post</a>
+         <a href="#Module 2.1 Blog Post">Module 2.1 Blog Post</a>
+         <a href="#Module 2.2 Blog Post">Module 2.2 Blog Post</a>
+         <a href="#Module 3.1 Blog Post">Module 3.1 Blog Post</a>
+         <a href="#Module 3.2 Blog Post">Module 3.2 Blog Post</a>
+         </nav>
 <!-- Main Content Area  -->
       <main>
          <!-- Module 1.1 Blog Post Starts Here-->
          <article>
             <header class="article-header">
-               <h2>Module 1.1 Blog Post</h2>
+               <h2 id="Module 1.1 Blog Post">Module 1.1 Blog Post</h2>
             </header>
             <h3>Introduction</h3>
             <p>Today's era of hyper connection and speed is giving us more complex systems than ever everything from intelligent cities and driverless cars to cloud-native applications and connected health. Not just are these systems technologically more sophisticated, but they are embedded in intricate social, regulatory, and environmental contexts as well. Consequently, traditional engineering practices reliant on linear logic and document dense methodologies are not keeping up. This is where model-based systems engineering (MBSE) and systems thinking comes in and are surfacing as impactful, complementary methods that allow problem solvers and engineers to deal with complexity. This article explores how MBSE and systems thinking allow us to have an integrated, responsive, and a sustainable way of engineering. They are not mere processes, but rather an example, one that allows us to leave behind on the spot problem-solving and instead create active, collaborative, and impact solutions. </p>
@@ -48,7 +54,7 @@
          <!-- Module 1.2 Blog Post Starts here -->
          <article>
             <header class="article-header">
-               <h2>Module 1.2 Blog Post</h2>
+               <h2 id="Module 1.2 Blog Post">Module 1.2 Blog Post</h2>
             </header>
             <h3>Introduction</h3>
             <p>When we think about systems engineers, it is easy to picture people building highly technical solutions rockets, infrastructures, software platforms. But systems engineering is not about building things. It is about building the right things, in the right way, for the right reasons, and guiding them through every stage of their evolution. This strategic, life cycle focused view is the bedrock of systems thinking and the engine of model-based systems engineering. In this blog, I will talk about the concept of the systems development life cycle, compare three common life cycle models linear, iterative, and incremental and reflect on why a life cycle perspective is crucial to the sustainability and adaptability of digital systems.</p>
@@ -80,7 +86,7 @@
          <!-- Module 2.1 Blog Post Starts here -->
          <article>
             <header class="article-header">
-               <h2>Module 2.1 Blog Post</h2>
+               <h2 id="Module 2.1 Blog Post">Module 2.1 Blog Post</h2>
             </header>
             <h3>Introduction</h3>
             <p>In the world of technology where digital environments, systems, and products are being constantly created every day, you do not think about the philosophies behind the designs and everything, but they are made specifically for people in mind. Huma-centered design (HCD) is the act of designing digital systems based on how people think, interact, and feel about technology. This blog will address a variety of topics related to HCD from understanding the points of people are focused on the design of systems to the key UX laws because all these points are extremely important designing around human interaction in mind today as technology continues to constantly grow from new to upgraded designs. </p>
@@ -110,7 +116,7 @@
          <!-- Module 2.2 Blog Post Starts here -->
          <article>
             <header class="article-header">
-               <h2>Module 2.2 Blog Post</h2>
+               <h2 id="Module 2.2 Blog Post">Module 2.2 Blog Post</h2>
             </header>
             <img src="images/memory.jgep" alt="Brain's Memory" width="480" height="270">
             <h3>Introduction</h3>
@@ -142,7 +148,7 @@
          <!-- Module 3.1 Blog Post Starts here -->
          <article>
             <header class="article-header">
-               <h2>Module 3.1 Blog Post</h2>
+               <h2 id="Module 3.1 Blog Post">Module 3.1 Blog Post</h2>
             </header>
             <h3>Introduction</h3>
             <p>User interface designs and usability may not seem extremely important or noticeable at first, but they are both extremely interconnected with each other. This is interface logic coming into play which widely shapes visuals and influences user behavior from the success rate of users completing tasks, the rate of users abandoning those tasks, and even the enjoyability of the interface. Thoughtful design choices make a dramatic difference in how they hinder or guide you along the system in whatever task you have. In this blog, we will explore how interface layout and control design impact user behavior, talking about new key UX laws, and even talking about personal interface experience and why the experience went a certain way.  </p>
@@ -159,7 +165,7 @@
             <h3>Von Restoriff Effect</h3>
             <p>Going by the name Isolation Effect, the Von Restoriff Effect the psychological principle that items that stand out are more easily remembered by users. A straightforward way to remember this is you are looking at a black and white image and something with vibrant color is in the image somewhere. </p>
             <figure>
-               <img src="images/rose.png" alt="Black and White background with colored Rose" width="982" height="1227.5">
+               <img src="images/rose.png" alt="Black and White background with colored Rose" width="400" height="650">
                <figcaption>Photo by <a href="https://unsplash.com/@alaaiqj">Ala Mohammed</a> on <a href="https://unsplash.com/photos/a-white-rose-with-black-leaves-on-a-dark-background-t0a3sgSp4Sg">Unsplash</a></figcaption>
             </figure>
             <p>You are more likely to remember the thing with color because it stands out from everything else. According to Mod (2024) in Von Restorff Effect: UX Law of Distinctiveness, this is a survival mechanism where we would notice and remember deviations and alert our brains. This is crucial in alerting users about important things like buttons, more specifically call-to-action (CTA) buttons. An example of this would be a website like Amazon and how their sign in button is yellow they do not use almost anywhere else. The important detail is almost nowhere else because this means they are smart in not overusing this effect and are sparingly using it for users to remember these key CTA which some are the add to cart, their prime service, or a couple of others. </p>
@@ -183,7 +189,48 @@
             </footer>
          </article>
          <!-- Module 3.2 Blog Post Starts here -->
-
+         <article>
+            <header class="article-header">
+               <h2 id="Module 3.2 Blog Post">Module 3.2 Blog Post</h2>
+            </header>
+            <h3>Introduction</h3>
+            <p>Interface interactions are not just about functionality; they are about timing, motion, and error prevention. These range from the amount of delay users feel, any animations, and every confirmation message having a mutual conversation with the user to lead them to a meaningful and ethical experience. Giving the sense of control to users without huge workloads is an amazing design. Bad design in these aspects will bring negative emotions for users and even possibly alienate them away from the interface. This blog post will explore the patterns of timing, motion, and error prevention with how they shape the experience of the interface overall. We will also go over multiple UX laws that closely relate to this topic and the importance of everything overall. </p>
+            <div class="image-bar">
+               <figure>
+                  <img src="images/time.png" alt="Stop Watch" width="480" height="270">
+                  <figcaption>Photo by <a href="https://unsplash.com/@rn2917">Reyna</a> on <a href="https://unsplash.com/photos/a-screenshot-of-a-computer-OZRrzkBh6VQ">Unsplash</a></figcaption>
+               </figure>
+               <figure>
+                  <img src="images/motion.png" alt="Moving Water" width="480" height="270">
+                  <figcaption>Photo by <a href="https://unsplash.com/@matthardy">Matt Hardy</a> on <a href="https://unsplash.com/photos/body-of-water-under-sky-6ArTTluciuA">Unsplash</a></figcaption>
+               </figure>
+               <figure>
+                  <img src="images/ethics.png" alt="Ethics" width="480" height="270">
+                  <figcaption>Photo by <a href="https://unsplash.com/@kellysikkema">Kelly Sikkema</a> on <a href="https://unsplash.com/photos/an-open-book-sitting-on-top-of-a-wooden-table-3AizfOuMfP8">Unsplash</a></figcaption>
+               </figure>
+            </div>
+            <h3>Timing and Feedback</h3>
+            <p>Responsiveness is closely tied to emotional experience when dealing with digital systems. The amount of time needed to give feedback is under four hundred milliseconds. This is the expectation in digital interfaces which directly align with the Doherty Threshold. This fast feedback is important because “When users receive immediate feedback in response to their actions, they feel acknowledged, which, in turn, increases engagement.” (Mod, 2024). This increase in engagement is important because this will lower the overall number of users leaving tasks unfinished or even dropping the task all together. Our brains are sensitive to lengthy delays and can cause a drop in motivation and productivity which is prevented if we understand the threshold of around or less than four hundred milliseconds. A feedback animation such as a loading one can be used during this downtime to keep anxiety low.  </p>
+            <h3>Motion and Flow</h3>
+            <p>Motion is another important pattern that helps the users stay oriented with the tasks at hand and is also tied to the emotional response for users. The previous mention of a loading animation is a prime example of the users intuitively understanding the situation at hand, leaving them reassured and leaving less mental effort. A UX law that closely relates to the emotional response from users is the Peak-End Rule. This is based on how the brain remembers information as not one fluid recording, but in snapshots, more specifically the peak of our emotions of a specific moment and the end of the moment. So, “When designing interfaces and experiences, pay attention to the most intense points of a typical user journey (the “peaks”) and the final moments (the “end”).” (Kane, 2024). So, this places an important emphasis on optimizing the experience where there will be a peak pleasant experience with a good end instead of creating an average pleasant experience throughout the interface. Another key point from the article is that they mention that negative experiences tend to be remembered more than positive experiences so optimizing around possible negative functions within the interface is important for how people view your interface and possible not want to use your interface anymore.  </p>
+            <p>Flow is an important part of motion coinciding with the Peak-End Rule as when motion is fully supporting the user, they can reach flow which is a “mental state in which a person performing an activity is fully immersed in a feeling of energized focus, full involvement, and enjoyment in the process of the activity.” (Yablonski, 2024). This is difficult to achieve as finding the right spot between engaging and difficulty is important to have users reach this state especially with users varying skill levels. This is important to keep in mind as a designer though because a flow state allows people to be up to five times more productive than normal. </p>
+            <h3>Error Prevention</h3>
+            <p>Error prevention is not just about how smooth and usable the interface is, it is about protecting users from negative experiences from data loss, any unexpected harmful effects to users, and most importantly not arising negative emotions from users. Designing with clear guidance in mind or offering ways to recover from mistakes is a showing of proper user design. The question would be on how to prevent mistakes in the first place which it was mentioned that “The main way to help people avoid making mistakes—errors of intention—is to provide accurate information in a form they can easily understand.” (Johnson, 2020). Clear information is always important while not having the user remember too much information is crucial to keeping up with Miller’s Law where people have a set number of things they are to keep in their working memory. Further into the chapter a simple solution to prevent mistakes from disabling the submit button until all actions are properly filled in or to recovery from a mistake is to add a simple undo button and confirming with the user any substantial changes that can affect the system. These solutions around mistakes are important to incorporate as to prevent the user from feeling like the mistake completely lies on themselves instead even when the fault can come from the system itself especially when the undo feature is a common interface function and not having it would alleviate from Jakob’s Law. Overall, it is important to keep error prevention in mind as it closely follows many UX laws which focuses on lowering mental strain and usability. </p>
+            <h3>Persuasive Design and Ethics</h3>
+            <p>Persuasion techniques are an effective way to improve engagement from users, but there are questions about ethics in using these techniques and how important it is. There are around seven principles of persuasion according to Exploring the ethics of persuasive design: scarcity, authority, reciprocity, consistency, liking, social proof, and unity. (Philips). Some of these principles like scarcity can become quite scary as it makes people feel like they need the product before it disappears, but this also can become a good source of information for people to decide if they are in current need of the product or they can delay their purchase to when they are back in stock. Another positive example would be the use of consistency. Duolingo uses this well in the fact that there are streaks and rewards associated with constant use of their service, which is good as a language learning service. There are multiple ways to interpret these techniques being used, and transparency is a safe way to build trust between the user and the designers. There are also many other ethical guidelines to help build trust like privacy, outlining the guidelines and laws, constantly staying educated from the designer and users' sides. At the end of the day, the most important things are that “It’s time that designers confront this tension and accept that it’s our responsibility to create products and experiences that support and align with the goals and well-being of users.” (Yablonski, 2024). The designers at the end of the day understand that users are suspected of exploitation and create a professionally designed system with ethics in mind carefully tailoring for the users.  </p>
+            <h3>Conclusion</h3>
+            <p>Design is about communication between designers and their users. Timing, motion, and error prevention are all important for designers to understand and keep a look out constantly. They all are a crucial part of the user experience and how they view our interface. Designers need to keep a strong ethical responsibility for the emotional and psychological side of users because of the trust users need to have to use their interface. This is crucial; any trust lost is incredibly hard to get back after the situation passes. Overall, when interaction design is done properly, it defines the users experience from not just usability, but also their emotional attachment to your interface. </p>
+            <footer class="article-footer">
+               <h3>Sources:</h3>
+               <ol>
+                   <li>Johnson, J. (2020). Designing with the Mind in Mind (3rd ed.). Elsevier S & T. <em>Direct manipulation: Definition</em>. Retrieved May 30, 2025 from <a href="https://cwu.vitalsource.com/books/9780128182031">https://cwu.vitalsource.com/books/9780128182031</a></li>
+                   <li>Kane, L. (2018, December 30). The Peak–End Rule: How Impressions Become Memories. Nielsen Norman Group. <em>Direct manipulation: Definition</em>. Retrieved May 30, 2025 from <a href="https://www.nngroup.com/articles/peak-end-rule/">https://www.nngroup.com/articles/peak-end-rule/</a></li>
+                   <li>Mod, D. (2024, March 29). Doherty Threshold: UX Law of Swift Interactions. Articles on Everything UX: Research, Testing & Design. <em>Direct manipulation: Definition</em>. Retrieved May 30, 2025 from <a href="https://blog.uxtweak.com/doherty-threshold/">https://blog.uxtweak.com/doherty-threshold/</a></li>
+                   <li>Philips, M. (2023, May 11). Exploring the ethics of persuasive design. Medium. <em>Direct manipulation: Definition</em>. Retrieved May 30, 2025 from <a href="https://uxdesign.cc/exploring-the-ethics-of-persuasive-design-fc06ef847ebe">https://uxdesign.cc/exploring-the-ethics-of-persuasive-design-fc06ef847ebe</a></li>
+                   <li>Yablonski, J. (2024). Laws of UX (2nd ed.). O'Reilly Media, Inc.. <em>Direct manipulation: Definition</em>. Retrieved May 30, 2025 from <a href="https://cwu.vitalsource.com/books/9781098146924">https://cwu.vitalsource.com/books/9781098146924</a></li>
+                  </ol>
+            </footer>
+         </article>
       </main>
 <!-- Page Footer  -->
       <footer class="page-footer">
