finished 3.2 module blog
confused about styling

--- a/furuci/index.html
+++ b/furuci/index.html
@@ -365,6 +365,65 @@
 
     
          <!-- Module 3.2 Blog Post Starts here -->
+   <header class="article-header">
+      <h2>Module 3.2 Blog Post</h2>
+         </header>
+            <h3>Introduction</h3>
+
+            <p>Influencers thrive on feedback on a day-to-day basis. They need to get views, likes, reposts, costumes, gifts, galaxies, and more to make a profit. That’s why feedback and response is important for this career path to gain more engagement based on what the audience desires and wants. And just like influencers, User interface companies use this strategy to grab customers to purchase their product to gain their own profit and numbers. Within this blog we’ll go over how feedback, responsiveness and motion impact one’s user experience. As well as how a few UX laws are implanted within the topic at hand. Additionally, expressing how ethical design is important in regards of persuasive techniques and using real life examples and textbooks supporting the claims. Let’s get started!</p>
+
+            <h3>How Feedback Timing, Responsiveness, and Motion Shape User Experience<</h3>  
+
+            <p>Before going into question how all these factors impact the user experience, we’ll go into them all. Starting with feedback timing, what this entails is to find a good timing whether it’s duration of a video, time of day and look into the audiences' shoes of what will they watch completely without swiping or exiting out of a video. According to <em>“Response Timing for User Interfaces”</em> Barrgroup goes over “Proper timing in user interfaces often has more to do with the user's perception than with the actual passage of time.” This explains how the user’s feedback is important because it shows how long a person will be invested in a product before swiping on the video.</p>
+
+            <p>Moving into Responsiveness, it's good to know if the audience reacts to the video/promo/interface negatively and/or positively to gain insight on what’s working and what’s not. To go more in depth, responsiveness allows users to facilitate usability as well as finding information when needed when it comes to User Interfaces. An example of Responsiveness would be Amazon’s Review System <img src="images/amazon review system.png" alt="Amazon Review System">. With this User Interface, you can add your response towards the product one got as well as customize within the textbox with any questions or concerns. This comes to show how knowing the information at hand, being able to use the UI, and how the audience responses to the UI are important for business and engagement.</p>  
+
+            <p>The last factor will be Motion. What motion entails is just the interaction of humans and the user interaction. This consists of just hovering over an app, clicking on buttons, interacting with links, and more! According to <em>“How Subtle Motion Design Can Improve User Experience on Websites”</em> Nate Johnson says “Far from flashy animations or distracting effects, these micro-interactions—small, almost imperceptible animations—help bring interfaces to life, making them feel responsive, intuitive, and human. When done right, subtle motion can reduce cognitive load, provide seamless feedback, and influence user behavior in ways that are often felt more than seen.” This explains how there’s alot of store interfaces that have the hovering icons highlighted when hovered, so customers eyes get intrigued to click it and continue exploring the website. An example would be, within the JellyCat website when you hover over a button it highlights their signature robin egg blue color <img src="images/jellycat motion.jpg" alt= "JellyCat"> They did this most likely to catch the children’s eyes.This shows that visuals and motion are two key factors impacting the user's experience.</p>
+
+            <p>Overall, all three of these factors are crucial for deteriorating or improving the user experience. It’s always going to be in the hands of the consumer whether or not the interface soars or fails.</p>
+
+            <h3>Impact of the UX Laws; Peak- End Rule, Doherty Threshold, Power Comes Responsibility</h3>
+
+            <p>As always UX Laws are implemented in various ways within User Interfaces. In addition to this there will be three mentioned in today's blog and those will be; Peak-End Rule, Doherty Threshold and Power Comes Responsibility.</p>
+
+            <p>Firstly, <strong>Peak-End Rule</strong> goes over how a person remembers the most impactful events, the beginning and the end details and the main focus peak of the event. According to <em>“Laws of UX”</em> Jon Yablonski says “Our feelings during the most emotionally intense moments and at the end are averaged in our minds and heavily influence how we recall the overall experience to determine whether we’d be willing to do it again or recommend it to others. This observation, known as the peak–end rule, strongly suggests we should pay close attention to these critical moments to ensure users evaluate an overall experience positively.” This expresses how the most important aspects of the event will be favored over one another. The textbook also went over cognitive biases which also influence one's user experience and just life in general.</p>
+
+            <p>An example of Peak-End Rule would be TikTok Highlights from Streamer University <img src="images/kai cenat streamer university.jpg" alt= Streamer University> Kai Cenat (famous twitch streamer) rented a college university for a weekend for streamers and content creators having the ability to be seen and heard big or small. When it came to the most significant parts of Streamer University, it would usually contain drama, love triangles and pranks here and there. Although there were 100 streamers making livestreams throughout the weekend, only a few met the Peak-End Rule and outshined the rest.</p>
+
+            <p>Secondly, we’ll go over <strong>Applying Psychological Principles in Design</strong>.What this law entails is looking at User Interface Designs from a perspective of how users will look at the designs and how they would interact with them. If it has great visuals, it not only enhances visibility and interaction, but it will also stand out against competitors. Additionally, with the User Experience, if the design of the interface is accessible, easy to use, and the content is easy to comprehend, this will help consumers continue to interact with the content instead of swiping.</p> 
+
+            <p>Lastly, <strong>Doherty Threshold</strong> explains how fast information can be implemented, how the users emotionally attach to the experience can make the first impression of what it's about in a split second. According to <em>"Laws of UX"<em> the author goes over “One of the features that is critical to good user experiences is performance. Emotions can quickly turn to frustration and leave a negative lasting impact when users who are trying to achieve a task are met with slow processing, lack of feedback, or excessive load times.” This explains how emotions have a huge role in how we react to user interfaces.</em>   
+
+            <p>An example of this would be when content creators make “ragebait content” (content just to make people mad) to get numbers and engagement regarding the views so the creators can monetize them. Additionally, the people who make content giving back and get famous from it monetize positive views, comments, etc. All this shows how content creators, brands, companies will do anything for viewers and consumers to interact with their user interface/video.</p>
+
+            <p>Within the <em>"UX Laws"</em> regarding (Doherty Threshold) Yablonski gave an example about Instagram it said “One common example used by platforms such as Instagram (Figure 10-2) is the presentation of a skeleton screen when content is loading. This technique makes the site appear to load faster by instantly displaying placeholder blocks in the areas where content will eventually appear (39).” When it blocks content, it grabs the user’s attention to stay and wait for it to load due to the heavy influence by the need to use the app. If a digital interface creates a heavy impact on one's life one will do anything for the app, website, shop to load and work.</p>
+
+            <p>For my personal experience, we’ll use TikTok. TikTok has me in a chokehold. TikTok has been implentented in my daily routine. I scroll up scroll on TikTok and when I want to switch my feed I scroll up to find new videos to watch. Not only does it have the refresh option, but it also keeps track of what I like so I can keep coming back for more. On top of just scrolling, there’s an academic tab, watching livestreams, and even shopping. So, one app can provide multiple services. Although TikTok and Instagram are free apps, the company makes profit by how many people interact with it in any way shape or form. This explains how Doherty Threshold had multiple factors that impact the User Experience.</p> 
+
+            Overall, these are extremely important to know how to enhance the user experience. 
+
+            <h3>Ensuring Ethical Design When Using Persuasive Techniques in Digital Interactions</h3>
+
+            <p>Next up, we’re going to be going over what ensuring ethical design means as well as what persuasive techniques are. Starting with <strong>Ethical Design</strong>, which means there are designs in place to respect data privacy with a mindset of making it human centered and accessible. According to “Designing Mind in Mind” Jeff Johnson says “We all have both system one and system two,5. But system two is often lazy: it accepts the quick estimates and judgments of system one even though they are often inaccurate. Why? Because the perceptions and judgments of system one comes quickly and are usually good enough to allow us to get by in most situations.” To coordinate with both systems of the brain, one must create an ethical design to ensure reduction of mistakes.</p>
+
+            <p>To put in perspective when it comes to selecting cars, for example, the customer would want the one that has the most benefits, safety and makes the best moral decisions over the seller that provides the least amount of information. In general, it's crucial to have an ethical design implemented to have a secure user interface and private life.</p>
+
+            <p>Furthermore, we’re transitioning into <strong>Persuasive Techniques</strong>. Persuasive Techniques in digital interactions mean the use of design elements and communication strategies to influence user behavior. Persuasive Techniques are important regarding promoting products, services and spreading the world and that aspect alone is a way to have digital interaction. A quote from <em>“Persuasion in the Digital Age: Tips for Effective Communication”</em> CodeDesign “Persuasion is the art of convincing people”. This shows how marketing and creating persuasion techniques in connection with digital interaction is needed for UI soars.</p>
+
+            <p> To put this in perspective, when the Superbowl commercials come up, the directors, creative team, etc. put all the persuasion techniques to grab the viewers' attention to interact with the content. They use vibrant colors, puppies, kids, crazy themes, logos and more persuasion techniques to reel people in. As a result, Persuasion Techniques and Ethical Designs has a huge impact on the digital interactions.</p> 
+
+            <h3>Conclusion</h3>
+
+            <p> To sum this all up, there are a lot of factors that go into how someone’s user experience goes. There are cognitive biases that can sway how someone looks at a user interface. There are commercials and marketing that have many persuasive techniques to have consumers choose them over other competitors. There are even marketing teams that use more of the logical and ethical route of expressing their benefits and security of the product. Additionally, factors of feedback, responsiveness and motion impact how one’s user experience went. Positive or negative, it gives insight to developers on what to improve and get rid of. Lastly, Doherty Threshold, Peak End Rule and Psychological Principles need to be known to know why actions happen and what results users would receive.</p>
+
+            <h3>Sources</h3>
+               <ol>
+                  <li>Cristhyan. (2023, December 27).<em>Persuasion in the Digital Age: Tips for Efficient Communitcation</em> CodeDesign <a href="https://codedesign.org/persuasion-digital-age-tips-effective-communication"/> Outside Source Number One</a></li>
+                  <li><em>How Subtle Motion Design Can Improve User Experience on Websites.</em> (2024). Triptych.co. <a href="https://www.triptych.co/post/how-subtle-motion-design-can-improve-user-experience-on-websites"/> Outside Source Number 2 </a></li>
+                  <li> Johnson, J. (2020). <em> Designing with the Mind in Mind (3rd ed.).</em>Elsevier S & T. <a href="https://cwu.vitalsource.com/books/9780128182031"/> Assigned Reading Number One </a></li>
+                  <li><em>Response Timing for User Interfaces.</em> (2016). Barrgroup.com. <a href=" https://barrgroup.com/blog/response-timing-user-interfaces "/> Outside Source Number Three </a></li>
+                  <li>Yablonski, J. (2024).<em>Laws of UX (2nd ed.).</em> O'Reilly Media, Inc.. <a href="https://cwu.vitalsource.com/books/9781098146924"/> Assigned Reading Number Two </a></li>
+               </ol>
 
       </main>
 <!-- Page Footer  -->
@@ -374,4 +433,3 @@
    </body>
 </html>
 
-  <!-- Module 3.2 Blog Post Starts here -->
