--- a/mcialwainc/index.html
+++ b/mcialwainc/index.html
@@ -157,7 +157,7 @@
 <a href="https://www.figma.com/resource-library/human-centered-design/"></a>
 
 
-
+<!--Blog 2.2-->
          <h3>What Makes Digital Systems Usable: The Role of Memory, Habits, and Mental Shortcuts</h3>
 <p>In today’s world, where digital platforms play a central role in how we work, communicate, enjoy entertainment, and learn, having a user-friendly experience is essential, not just a bonus. A well-designed system allows users to accomplish their tasks efficiently and with satisfaction, while minimizing any frustrations they might face. But what does “usability” really mean, and what mental factors influence how we engage with these digital systems?
    To truly grasp usability, we first need to consider how the human mind works. Each time users interact with a digital platform, they come with a unique blend of expectations, habits, and cognitive boundaries. These aspects encompass our memory, the way we develop habits, and how we use mental shortcuts—often called heuristics—to make decisions swiftly and efficiently. When a system resonates with these cognitive behaviors, it is seen as intuitive, user-friendly, and effective. On the flip side, when designers overlook these considerations, they can end up creating products that are hard to navigate and frustrating to use, ultimately leading to failure.
