--- a/durhamj/index.html
+++ b/durhamj/index.html
@@ -8,77 +8,23 @@
    </head>
    <body>
 <!-- Page Header  -->
-      <header class="page-header">
-         <h1>Portfolio</h1>
-      </header>
+      <header>
+  <h1>Hi, I'm John.</h1>
+ </header>
 <!-- Main Content Area  -->
       <main>
-         <!-- Module 1.2 Blog Post Starts here -->
-
-         <!-- Module 2.1 Blog Post Starts here -->
-
-         <!-- Module 2.2 Blog Post Starts here -->
-
-         <!-- Module 2.3 Blog Post Starts here -->
-
-         <!-- Module 3.1 Blog Post Starts here -->
-
-         <article>
-            <header class="article-header">
-               <h2>Module 3.1 Blog Post</h2>
-            </header>
-            <section class="article-content">
-            <h3>Health Cronut la Croix</h3>
-            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice.</p>
-            <p>Cronut raclette cornhole actually JOMO vinyl master cleanse tonx. Blackbird spyplane flexitarian hoodie small batch, art party mixtape vibecession next level pabst twee. Chillwave JOMO coloring book drinking vinegar, blue bottle cronut vice gorpcore helvetica.</p>
-            
-            <dl>
-               <dt>fixie mug</dt>
-               <dd>fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice</dd>
-               <dt>vexillologist</dt>
-               <dd>semiotics hella salvia kickstarter jean shorts</dd>
-            </dl>
-            <p>Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out. Fixie mug salvia selfies. Tbh godard man bun pun vape schlitz ennui yes plz literally. Cred.</p>
-            <figure>
-               <img src="images/fixie-mug.jpg" alt="a red mug with a silly face">
-               <figcaption>Photo by <a href="https://unsplash.com/@asandan?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Asanda Ntshiqa</a> on <a href="https://unsplash.com/photos/red-ceramic-mug-TKSqhx7CEP4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></figcaption>
-            </figure>
-            <p>Taiyaki try-hard bodega boys, chicharrones drinking vinegar iceland semiotics letterpress blackbird spyplane fit gentrify pour-over church-key. Asymmetrical normcore kickstarter, cornhole taxidermy scenester cold-pressed disrupt copper mug intelligentsia meh post-ironic paleo unicorn ugh. Scenester craft beer post-ironic pickled pop-up woke. Pitchfork keytar cliche letterpress, flannel twee snackwave fanny pack direct trade vape meh gastropub. DSA artisan jawn narwhal sriracha bitters raclette meditation yes plz seitan normcore listicle. Tilde authentic tbh meh readymade. JOMO ethical everyday carry before they sold out crucifix solarpunk sustainable.</p>
-            <h3>Offal Tofu Cred Green Juice</h3>
-            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix.</p>
-            <p>90's humblebrag cornhole yuccie fashion axe literally, venmo fixie tofu 3 wolf moon. Mukbang fashion axe actually lo-fi tonx normcore schlitz drinking vinegar. Unicorn tousled coloring book, ramps fixie farm-to-table kombucha umami twee readymade post-ironic man bun. Keytar locavore helvetica shaman succulents hella farm-to-table.</p>
-            <figure>
-               <img src="images/offal-tofu-green.jpg" alt="a bowl of tofu and cucumber">
-               <figcaption>Photo by <a href="https://unsplash.com/@yoavaziz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Yoav Aziz</a> on <a href="https://unsplash.com/photos/sliced-of-vegetables-in-clear-glass-bowl-TqtY4_sQGVE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></figcaption>
-            </figure>
-            <p>Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
-            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
-            <figure>
-               <img src="images/blue-roof.jpg" alt="a white cathedral with a blue roof near a sea">
-               <figcaption>Photo by <a href="https://unsplash.com/@deko_photo4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Valdemaras D.</a> on <a href="https://unsplash.com/photos/white-cathedral-near-sea-U2bIFFmUK_M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></figcaption>
-            </figure>
-            <p>Thundercats pabst meh hot chicken, poke food truck franzen semiotics single-origin coffee listicle lyft hexagon cred fingerstache big mood. Tofu vice echo park VHS quinoa, vaporware church-key gluten-free taiyaki. Selfies lyft sus etsy forage unicorn aesthetic celiac asymmetrical freegan. Cardigan stumptown irony shoreditch kogi photo booth mukbang. Four loko keytar pinterest mukbang.</p>
-            <ul>
-               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
-               <li>Tacos cornhole humblebrag ethical.</li>
-               <li>DSA santo big mood organic charcoal bitters.</li>
-               <li>Hot chicken pitchfork poutine.</li>
-            </ul>
-            <h3>Mlkshk Stumptown Hot Chicken</h3>
-            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
-
-            <footer class="article-footer">
-                <h3>Sources:</h3>
-                <ol>
-                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
-                    </ol>
-            </footer>
-            </section>
-         </article>
-
-         <!-- Module 3.2 Blog Post Starts here -->
-
+         <p>Trained in music theory and composition, published author, self-educated designer, life-long learner, efficient communicator, I am obsessed with sound, words, human-centered design, modern art, and lines that point you somewhere.</p>
+         <header>
+         <h2>Check out my portfolio.</h2>
+         <p>These are the examples I've put together as reference material for my web, app, and ux/ui courses at Central Washington University.</p>
+         </header>
+         <nav>
+            <a href="blog">blog mockup</a>
+            <a href="https://www.figma.com/board/9O9GxUn1zssEC25hVGr5J8/Context-Aware-Digital-System-Diagrams-Example?t=R1pFQAYnH5G3FXbU-1">digital system diagrams (figjam)</a>   
+            <a href="https://www.figma.com/design/2BwDcynwbs79827NjnzvUs/Web-App-Style-Guide-Example?t=q0TmcZZ5F1NbNbi0-1">web app style guide</a>      
+            <a href="https://www.figma.com/proto/A69nzVmUdqziMZTiDT2NUt/User-Journey-Prototype?node-id=0-1&t=R1pFQAYnH5G3FXbU-1">user journey prototype(figma)</a>
+            <a href="website-mockup">website mockup</a>
+         </nav>
       </main>
 <!-- Page Footer  -->
       <footer class="page-footer">
