--- a/durhamj/index.html
+++ b/durhamj/index.html
@@ -7,18 +7,19 @@
       <title>Student Name | Portfolio</title>
    </head>
    <body>
-<!-- Page Header  -->
-      <header>
-  <h1>Hi, I'm John.</h1>
- </header>
 <!-- Main Content Area  -->
       <main>
+         <!-- Page Header  -->
+         <header>
+            <h1>Hi, I'm John.</h1>
+           </header>
          <p>Trained in music theory and composition, published author, self-educated designer, life-long learner, efficient communicator, I am obsessed with sound, words, human-centered design, modern art, and lines that point you somewhere.</p>
          <header>
          <h2>Check out my portfolio.</h2>
          <p>These are the examples I've put together as reference material for my web, app, and ux/ui courses at Central Washington University.</p>
          </header>
          <nav>
+            <a href="portfolio-example">portfolio page</a>
             <a href="blog">blog mockup</a>
             <a href="https://www.figma.com/board/9O9GxUn1zssEC25hVGr5J8/Context-Aware-Digital-System-Diagrams-Example?t=R1pFQAYnH5G3FXbU-1">digital system diagrams (figjam)</a>   
             <a href="https://www.figma.com/design/2BwDcynwbs79827NjnzvUs/Web-App-Style-Guide-Example?t=q0TmcZZ5F1NbNbi0-1">web app style guide</a>      
@@ -26,9 +27,9 @@
             <a href="website-mockup">website mockup</a>
          </nav>
       </main>
-<!-- Page Footer  -->
+<!-- Page Footer  
       <footer class="page-footer">
        <p>Copyright &copy; 2025</p>
-      </footer>
+      </footer>-->
    </body>
 </html>
