additional portfolio page styles added

--- a/durhamj/index.html
+++ b/durhamj/index.html
@@ -7,16 +7,16 @@
       <title>Student Name | Portfolio</title>
    </head>
    <body>
-<!-- Main Content Area  -->
+      <!-- Main Content Area  -->
       <main>
          <!-- Page Header  -->
          <header>
             <h1>Hi, I'm John.</h1>
            </header>
-         <p>Trained in music theory and composition, published author, self-educated designer, life-long learner, efficient communicator, I am obsessed with sound, words, human-centered design, modern art, and lines that point you somewhere.</p>
+         <p class="blurb-text">Trained in music theory and composition, published author, self-educated designer, life-long learner, efficient communicator, I am obsessed with sound, words, human-centered design, modern art, and lines that point you somewhere.</p>
          <header>
          <h2>Check out my portfolio.</h2>
-         <p>These are the examples I've put together as reference material for my web, app, and ux/ui courses at Central Washington University.</p>
+         <p class="blurb-text">These are the examples I've put together as reference material for my web, app, and ux/ui courses at Central Washington University.</p>
          </header>
          <nav>
             <a href="portfolio-example">portfolio page</a>
@@ -26,10 +26,10 @@
             <a href="https://www.figma.com/proto/A69nzVmUdqziMZTiDT2NUt/User-Journey-Prototype?node-id=0-1&t=R1pFQAYnH5G3FXbU-1">user journey prototype(figma)</a>
             <a href="website-mockup">website mockup</a>
          </nav>
+        <!-- Page Footer -->
+         <footer class="page-footer">
+            <p>Copyright &copy; 2025</p>
+         </footer>
       </main>
-<!-- Page Footer  
-      <footer class="page-footer">
-       <p>Copyright &copy; 2025</p>
-      </footer>-->
    </body>
 </html>
