--- a/durhamj/portfolio-example/index.html
+++ b/durhamj/portfolio-example/index.html
@@ -20,12 +20,13 @@
          </header>
          <nav>
             <ul>
-               <li><a href="portfolio-example">portfolio page</a></li>
-               <li><a href="blog">blog mockup</a></li>
+               
+               <li><a href="../blog">blog mockup</a></li>
                <li><a href="https://www.figma.com/board/9O9GxUn1zssEC25hVGr5J8/Context-Aware-Digital-System-Diagrams-Example?t=R1pFQAYnH5G3FXbU-1">digital system diagrams (figjam)</a></li>
                <li><a href="https://www.figma.com/design/2BwDcynwbs79827NjnzvUs/Web-App-Style-Guide-Example?t=q0TmcZZ5F1NbNbi0-1">web app style guide</a></li>      
                <li><a href="https://www.figma.com/proto/A69nzVmUdqziMZTiDT2NUt/User-Journey-Prototype?node-id=0-1&t=R1pFQAYnH5G3FXbU-1">user journey prototype(figma)</a></li>
-               <li><a href="website-mockup">website mockup</a></li>
+               <li><a href="../website-mockup">website mockup</a></li>
+               <li><a href="../portfolio-example">portfolio page</a></li>
             </ul>
          </nav>
         <!-- Page Footer -->
