revising part one

--- a/furuci/index.html
+++ b/furuci/index.html
@@ -366,7 +366,19 @@
     
          <!-- Module 3.2 Blog Post Starts here -->
    <header class="article-header">
-      <h2>Module 3.2 Blog Post</h2>
+      <h2>Module 3.2 Blog Post</h2></header> 
+        
+
+         <header class="page-header">
+            <background-image src="images/flowersss.jpg" alt="flowers"/>
+             <nav id="main-nav">
+            <a href="#">Module 1.1</a>
+            <a href="#">Module 1.2</a>
+            <a href="#">Module 2.1</a>
+            <a href="#">Module 2.2</a>
+            <a href="#">Module 3.1</a>
+            <a href="#">Module 3.2</a>
+         </nav>
          </header>
             <h3>Introduction</h3>
 
